[package]
name = "himmelblaud"
description = "Himmelblau Authentication Daemon"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "himmelblaud"
path = "src/daemon.rs"

[[bin]]
name = "himmelblaud_tasks"
path = "src/tasks_daemon.rs"

[features]
console = ["dep:console-subscriber"]

[dependencies]
himmelblau_unix_common = { workspace = true }
idmap = { workspace = true }
tokio = { workspace = true, features = ["tracing"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
bytes = "^1.11.1"
uuid = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
futures = "^0.3.32"
himmelblau_policies = { workspace = true }
uzers = "^0.12.2"
sketching = { workspace = true }
walkdir = { workspace = true }
libc = { workspace = true }
kanidm_utils_users = { workspace = true }
notify-debouncer-full = { workspace = true }
kanidm-hsm-crypto = { workspace = true }
kanidm_lib_file_permissions.workspace = true
identity_dbus_broker.workspace = true
base64.workspace = true
async-trait.workspace = true
sd-notify = { version = "0.5.0", features = ["fdstore"] }
memfd = ">=0.6"
libhimmelblau.workspace = true
url.workspace = true
console-subscriber = { workspace = true, optional = true }
libkrimes = { workspace = true }

[package.metadata.deb]
name = "himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
depends = ["$auto"]
recommends = ["nss-himmelblau", "pam-himmelblau", "krb5-user", "cron", "tpm2-tools", "himmelblau-apparmor"]
suggests = ["himmelblau-orchestrator"]
assets = [
  ["../../target/debian/himmelblau.conf.example", "etc/himmelblau/himmelblau.conf", "644"],
  ["../../src/config/gdm3_service_override.conf", "usr/lib/systemd/system/gdm3.service.d/himmelblau-override.conf", "644"],
  ["target/release/aad-tool", "usr/bin/", "755"],
  ["../../platform/debian/himmelblaud-tasks.service", "usr/lib/systemd/system/", "644"],
  ["../../platform/debian/himmelblaud.service", "usr/lib/systemd/system/", "644"],
  ["../../platform/debian/himmelblau-hsm-pin-init.service", "usr/lib/systemd/system/", "644"],
  ["../../platform/debian/himmelblau-compliance-check.service", "usr/lib/systemd/user/", "644"],
  ["../../platform/debian/himmelblau-compliance-check.timer", "usr/lib/systemd/user/", "644"],
  ["scripts/himmelblau-init-hsm-pin", "usr/libexec/", "755"],
  ["target/release/himmelblaud", "usr/sbin/", "755"],
  ["target/release/himmelblaud_tasks", "usr/sbin/", "755"],
  ["../../README.md", "usr/share/doc/himmelblau/README", "644"],
  ["../../target/config/himmelblau.conf.example", "usr/share/doc/himmelblau/", "644"],
  ["../../man/man1/aad-tool.1", "usr/share/man/man1/", "644"],
  ["../../man/man5/himmelblau.conf.5", "usr/share/man/man5/", "644"],
  ["../../man/man8/himmelblaud.8", "usr/share/man/man8/", "644"],
  ["../../man/man8/himmelblaud_tasks.8", "usr/share/man/man8/", "644"],
  ["src/himmelblau-policies.tmpfiles.conf", "usr/lib/tmpfiles.d/himmelblau-policies.conf", "644"],
  ["src/himmelblaud.tmpfiles.conf", "usr/lib/tmpfiles.d/himmelblaud.conf", "644"],
  # For each language in po/LINGUAS, add:
  ["target/release/locale/de/LC_MESSAGES/himmelblau.mo", "usr/share/locale/de/LC_MESSAGES/", "644"],
  ["target/release/locale/fr/LC_MESSAGES/himmelblau.mo", "usr/share/locale/fr/LC_MESSAGES/", "644"],
  ["target/release/locale/fr_CA/LC_MESSAGES/himmelblau.mo", "usr/share/locale/fr_CA/LC_MESSAGES/", "644"],
  ["target/release/locale/sr@latin/LC_MESSAGES/himmelblau.mo", "usr/share/locale/sr@latin/LC_MESSAGES/", "644"],
  ["target/release/locale/sr@latin/LC_MESSAGES/himmelblau.mo", "usr/share/locale/sr/LC_MESSAGES/", "644"],
  ["target/release/locale/es/LC_MESSAGES/himmelblau.mo", "usr/share/locale/es/LC_MESSAGES/", "644"],
  ["target/release/locale/hi/LC_MESSAGES/himmelblau.mo", "usr/share/locale/hi/LC_MESSAGES/", "644"],
  ["target/release/locale/pt_BR/LC_MESSAGES/himmelblau.mo", "usr/share/locale/pt/LC_MESSAGES/", "644"],
  ["target/release/locale/pt_BR/LC_MESSAGES/himmelblau.mo", "usr/share/locale/pt_BR/LC_MESSAGES/", "644"],
  ["target/release/locale/pt_PT/LC_MESSAGES/himmelblau.mo", "usr/share/locale/pt_PT/LC_MESSAGES/", "644"],
  ["target/release/locale/ca/LC_MESSAGES/himmelblau.mo", "usr/share/locale/ca/LC_MESSAGES/", "644"],
  ["target/release/locale/ur_PK/LC_MESSAGES/himmelblau.mo", "usr/share/locale/ur_PK/LC_MESSAGES/", "644"],
  ["target/release/locale/am/LC_MESSAGES/himmelblau.mo", "usr/share/locale/am/LC_MESSAGES/", "644"],
  ["target/release/locale/om/LC_MESSAGES/himmelblau.mo", "usr/share/locale/om/LC_MESSAGES/", "644"],
  ["target/release/locale/ti/LC_MESSAGES/himmelblau.mo", "usr/share/locale/ti/LC_MESSAGES/", "644"],
  ["target/release/locale/zh_CN/LC_MESSAGES/himmelblau.mo", "usr/share/locale/zh_CN/LC_MESSAGES/", "644"],
  ["target/release/locale/ja/LC_MESSAGES/himmelblau.mo", "usr/share/locale/ja/LC_MESSAGES/", "644"],
  ["target/release/locale/it/LC_MESSAGES/himmelblau.mo", "usr/share/locale/it/LC_MESSAGES/", "644"],
  ["target/release/locale/tr/LC_MESSAGES/himmelblau.mo", "usr/share/locale/tr/LC_MESSAGES/", "644"],
  ["target/release/locale/uz/LC_MESSAGES/himmelblau.mo", "usr/share/locale/uz/LC_MESSAGES/", "644"],
  ["target/release/locale/ar/LC_MESSAGES/himmelblau.mo", "usr/share/locale/ar/LC_MESSAGES/", "644"],
  ["target/release/locale/nl/LC_MESSAGES/himmelblau.mo", "usr/share/locale/nl/LC_MESSAGES/", "644"],
  ["target/release/locale/id/LC_MESSAGES/himmelblau.mo", "usr/share/locale/id/LC_MESSAGES/", "644"],
  ["target/release/locale/ko/LC_MESSAGES/himmelblau.mo", "usr/share/locale/ko/LC_MESSAGES/", "644"],
  ["target/release/locale/bg/LC_MESSAGES/himmelblau.mo", "usr/share/locale/bg/LC_MESSAGES/", "644"],
  ["target/release/locale/bn/LC_MESSAGES/himmelblau.mo", "usr/share/locale/bn/LC_MESSAGES/", "644"],
  ["target/release/locale/cs/LC_MESSAGES/himmelblau.mo", "usr/share/locale/cs/LC_MESSAGES/", "644"],
  ["target/release/locale/da/LC_MESSAGES/himmelblau.mo", "usr/share/locale/da/LC_MESSAGES/", "644"],
  ["target/release/locale/el/LC_MESSAGES/himmelblau.mo", "usr/share/locale/el/LC_MESSAGES/", "644"],
  ["target/release/locale/fi/LC_MESSAGES/himmelblau.mo", "usr/share/locale/fi/LC_MESSAGES/", "644"],
  ["target/release/locale/he/LC_MESSAGES/himmelblau.mo", "usr/share/locale/he/LC_MESSAGES/", "644"],
  ["target/release/locale/hu/LC_MESSAGES/himmelblau.mo", "usr/share/locale/hu/LC_MESSAGES/", "644"],
  ["target/release/locale/nb/LC_MESSAGES/himmelblau.mo", "usr/share/locale/nb/LC_MESSAGES/", "644"],
  ["target/release/locale/pl/LC_MESSAGES/himmelblau.mo", "usr/share/locale/pl/LC_MESSAGES/", "644"],
  ["target/release/locale/ro/LC_MESSAGES/himmelblau.mo", "usr/share/locale/ro/LC_MESSAGES/", "644"],
  ["target/release/locale/sk/LC_MESSAGES/himmelblau.mo", "usr/share/locale/sk/LC_MESSAGES/", "644"],
]
maintainer-scripts = "scripts"

[package.metadata.generate-rpm]
name = "himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
assets = [
  { source = "../../target/config/himmelblau.conf.example", dest = "/etc/himmelblau/himmelblau.conf", mode = "644", config = "noreplace" },
  { source = "../../src/config/gdm3_service_override.conf", dest = "/usr/lib/systemd/system/display-manager.service.d/override.conf", mode = "644" },
  { source = "target/release/aad-tool", dest = "/usr/bin/", mode = "755" },
  { source = "../../platform/opensuse/himmelblaud-tasks.service", dest = "/usr/lib/systemd/system/", mode = "644" },
  { source = "../../platform/opensuse/himmelblaud.service", dest = "/usr/lib/systemd/system/", mode = "644" },
  { source = "../../platform/opensuse/himmelblau-hsm-pin-init.service", dest = "/usr/lib/systemd/system/", mode = "644" },
  { source = "../../platform/opensuse/himmelblau-compliance-check.service", dest = "/usr/lib/systemd/user/", mode = "644" },
  { source = "../../platform/opensuse/himmelblau-compliance-check.timer", dest = "/usr/lib/systemd/user/", mode = "644" },
  { source = "scripts/himmelblau-init-hsm-pin", dest = "/usr/libexec/", mode = "755" },
  { source = "target/release/himmelblaud", dest = "/usr/sbin/", mode = "755" },
  { source = "target/release/himmelblaud_tasks", dest = "/usr/sbin/", mode = "755" },
  { source = "../../README.md", dest = "/usr/share/doc/himmelblau/README", mode = "644" },
  { source = "../../target/config/himmelblau.conf.example", dest = "/usr/share/doc/himmelblau/", mode = "644" },
  { source = "../../man/man1/aad-tool.1", dest = "/usr/share/man/man1/", mode = "644" },
  { source = "../../man/man5/himmelblau.conf.5", dest = "/usr/share/man/man5/", mode = "644" },
  { source = "../../man/man8/himmelblaud.8", dest = "/usr/share/man/man8/", mode = "644" },
  { source = "../../man/man8/himmelblaud_tasks.8", dest = "/usr/share/man/man8/", mode = "644" },
  { source = "src/himmelblau-policies.tmpfiles.conf", dest = "/usr/lib/tmpfiles.d/himmelblau-policies.conf", mode = "644" },
  { source = "src/himmelblaud.tmpfiles.conf", dest = "/usr/lib/tmpfiles.d/himmelblaud.conf", mode = "644" },
  # For each language in po/LINGUAS, add:
  { source = "target/release/locale/de/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/de/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/fr/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/fr/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/fr_CA/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/fr_CA/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/sr@latin/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/sr@latin/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/sr@latin/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/sr/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/es/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/es/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/hi/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/hi/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/pt_BR/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/pt/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/pt_BR/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/pt_BR/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/pt_PT/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/pt_PT/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/ca/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/ca/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/ur_PK/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/ur_PK/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/am/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/am/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/om/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/om/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/ti/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/ti/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/zh_CN/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/zh_CN/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/ja/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/ja/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/it/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/it/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/tr/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/tr/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/uz/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/uz/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/ar/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/ar/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/nl/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/nl/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/id/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/id/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/ko/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/ko/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/bg/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/bg/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/bn/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/bn/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/cs/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/cs/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/da/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/da/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/el/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/el/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/fi/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/fi/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/he/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/he/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/hu/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/hu/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/nb/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/nb/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/pl/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/pl/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/ro/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/ro/LC_MESSAGES/", mode = "644" },
  { source = "target/release/locale/sk/LC_MESSAGES/himmelblau.mo", dest = "/usr/share/locale/sk/LC_MESSAGES/", mode = "644" },
]
post_install_script = "scripts/postinst"
pre_uninstall_script = "scripts/prerm"
post_uninstall_script = "scripts/postrm"

[package.metadata.generate-rpm.recommends]
nss-himmelblau = "*"
pam-himmelblau = "*"
himmelblau-selinux = "*"
himmelblau-apparmor = "*"
krb5 = "*"
cron = "*" # For Intune policy scripts
"(system-user-tss or tpm2-tss)" = "*"
# Boolean OR: covers tpm2-tools (Fedora/Rocky/Amazon) and tpm2.0-tools (openSUSE/SLE) in one
# expression. Requires RPM 4.13+, which ships on all supported RPM targets.
"(tpm2-tools or tpm2.0-tools)" = "*"

[package.metadata.generate-rpm.provides]
aad-cli = ""
aad-common = ""
authd = ""
authd-msentraid = ""

[package.metadata.generate-rpm.suggests]
himmelblau-sso = ""
himmelblau-orchestrator = "*"

[package.metadata.generate-rpm.requires]
man = ""

[package.metadata.cargo-machete]
ignored = ["libhimmelblau"]
