[package]
name = "himmelblau_dbus_service"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }
zbus = "4.3.1"
