[package]
name = "fxhash"
version = "0.2.1"
description = "Maintained drop-in replacement that re-exports rustc_hash with the classic fxhash API"
publish = false

edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rustc-hash = "2.1.1"
