[package]
name = "graph"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "graph"
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "^1.3.4", features = [ "v4" ] }
pem = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
kanidm-hsm-crypto = { workspace = true }
openssl = { workspace = true }
hostname = "^0.3.1"
os-release = { workspace = true }
compact_jwt = { workspace = true }
jsonwebtoken = { workspace = true }
urlencoding = { workspace = true }
msal = { workspace = true }
