[package]
name = "himmelblau_unix_common"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "himmelblau_unix_common"
path = "src/lib.rs"

[dependencies]
serde = { version = "^1.0.163", features = ["derive"] }
serde_json = "^1.0.96"
log = "^0.4.17"
