[package]
name = "himmelblaud"
description = "Himmelblau Authentication Daemon"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "himmelblaud"
path = "src/daemon.rs"

[dependencies]
himmelblau_unix_common = { version = "^0.1.0", path = "../unix_common" }
msal = { version = "^0.1.0", path = "../msal" }
tokio = { version = "^1.28.1", features = ["rt", "macros", "sync", "time", "net", "io-util"] }
tokio-util = { version = "^0.7.8", features = ["codec"] }
log = "^0.4.17"
clap = { version = "^3.2", features = ["derive", "env"] }
bytes = "^1.3.0"
serde = { version = "^1.0.163", features = ["derive"] }
serde_json = "^1.0.96"
configparser = "^3.0.2"
futures = "^0.3.28"
