[package]
name = "himmelblaud"
description = "Himmelblau Authentication Daemon"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "himmelblaud"
path = "src/daemon.rs"

[dependencies]
himmelblau_unix_common = { workspace = true }
msal = { workspace = true }
tokio = { version = "^1.28.1", features = ["rt", "macros", "sync", "time", "net", "io-util"] }
tokio-util = { version = "^0.7.8", features = ["codec"] }
log = { workspace = true }
clap = { version = "^3.2", features = ["derive", "env"] }
bytes = "^1.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
futures = "^0.3.28"
systemd-journal-logger = "^1.0.0"
