[package]
name = "idmap"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
no_sssd_idmap = []

[lib]
name = "idmap"
path = "src/lib.rs"

[dependencies]
libc.workspace = true
tracing.workspace = true
uuid.workspace = true

[build-dependencies]
cc = "1.2.19"
bindgen = "0.71.1"
