[package]
name = "idmap"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "idmap"
path = "src/lib.rs"

[dependencies]
murmur3 = "0.5.2"
unicode-normalization = "0.1.24"
uuid.workspace = true
