[package]
name = "msal"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "msal"
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "^0.18.3", features = ["auto-initialize"] }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
