[package]
name = "msal"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "msal"
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "^0.18.3", features = ["auto-initialize"] }
log = { workspace = true }
reqwest = { version = "^0.11.18", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "^1.0.71"
