[package]
name = "nss_himmelblau"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "nss_himmelblau"
crate-type = [ "cdylib" ]
path =  "src/lib.rs"

[dependencies]
himmelblau_unix_common = { workspace = true }
kanidm_unix_common = { workspace = true }
libnss = "0.5.0"
libc = { workspace = true }
paste = { workspace = true }
lazy_static = { workspace = true }

