[package]
name = "nss_himmelblau"
description = "Himmelblau NSS Module"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "nss_himmelblau"
crate-type = [ "cdylib" ]
path =  "src/lib.rs"

[dependencies]
himmelblau_unix_common = { workspace = true }
libnss = "0.9.0"
libc = { workspace = true }
paste = { workspace = true }
lazy_static = { workspace = true }

[package.metadata.deb]
name = "nss-himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
assets = [
  ["target/release/libnss_himmelblau.so", "usr/lib/x86_64-linux-gnu/libnss_himmelblau.so.2", "755"],
]
maintainer-scripts = "scripts"

[package.metadata.generate-rpm]
name = "nss-himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
assets = [
  { source = "target/release/libnss_himmelblau.so", dest = "/usr/lib64/libnss_himmelblau.so.2", mode = "755" },
]
post_install_script = "scripts/postinst"
