[package]
name = "o365"
description = "Himmelblau Office 365 Integration"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
anyhow = "1.0"

[package.metadata.deb]
depends = ["curl", "libfuse2", "jq"]
assets = [
  ["src/o365.sh", "usr/bin/o365", "755"],
  ["src/o365-multi.sh", "usr/bin/o365-multi", "755"],
  ["src/o365-url-handler.sh", "usr/bin/o365-url-handler", "755"],
  ["generated/*.desktop", "usr/share/applications/", "644"],
  ["src/*.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
  ["../../platform/debian/apparmor.fusermount3.local", "etc/apparmor/local/fusermount3", "644"]
]
maintainer-scripts = "scripts"

[package.metadata.generate-rpm]
assets = [
  { source = "src/o365.sh", dest = "/usr/bin/o365", mode = "755" },
  { source = "src/o365-multi.sh", dest = "/usr/bin/o365-multi", mode = "755" },
  { source = "src/o365-url-handler.sh", dest = "/usr/bin/o365-url-handler", mode = "755" },
  { source = "generated/*.desktop", dest = "/usr/share/applications/" },
  { source = "src/*.png", dest = "/usr/share/icons/hicolor/256x256/apps/" },
]
post_install_script = "scripts/postinst"
post_uninstall_script = "scripts/postrm"

[package.metadata.generate-rpm.recommends]
curl = "*"
libfuse2 = "*"
jq = "*"
