[package]
name = "o365"
description = "Himmelblau Office 365 Integration"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

[package.metadata.deb]
recommends = ["microsoft-edge-stable | google-chrome-stable | chromium"]
assets = [
  ["src/o365-browser-launcher.sh", "usr/bin/o365-browser-launcher", "755"],
  ["generated/*.desktop", "usr/share/applications/", "644"],
  ["src/*.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
]
maintainer-scripts = "scripts"

[package.metadata.generate-rpm]
assets = [
  { source = "src/o365-browser-launcher.sh", dest = "/usr/bin/o365-browser-launcher", mode = "755" },
  { source = "generated/*.desktop", dest = "/usr/share/applications/" },
  { source = "src/*.png", dest = "/usr/share/icons/hicolor/256x256/apps/" },
]
post_install_script = "scripts/postinst"
post_uninstall_script = "scripts/postrm"

[package.metadata.generate-rpm.supplements]
"(microsoft-edge-stable and himmelblau)" = ""
"(google-chrome-stable and himmelblau)" = ""
"(chromium and himmelblau)" = ""
