[package]
name = "pam_himmelblau"
description = "Himmelblau PAM Module"
links = "pam"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "pam_himmelblau"
crate-type = [ "cdylib" ]

[features]
interactive = ["libhimmelblau/interactive"]

[dependencies]
libc = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
himmelblau_unix_common.workspace = true
tokio.workspace = true
libhimmelblau.workspace = true

[build-dependencies]
pkg-config.workspace = true

[package.metadata.deb]
name = "pam-himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
assets = [
  ["target/release/libpam_himmelblau.so", "usr/lib/x86_64-linux-gnu/security/pam_himmelblau.so", "755"],
  ["../../platform/debian/pam-config", "usr/share/pam-configs/himmelblau", "644"],
  ["../../platform/debian/apparmor.unix-chkpwd.local", "etc/apparmor.d/local/unix-chkpwd", "644"],
]
maintainer-scripts = "../../platform/debian/scripts"
features = ["interactive"]

[package.metadata.generate-rpm]
name = "pam-himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
assets = [
  { source = "target/release/libpam_himmelblau.so", dest = "/usr/lib64/security/pam_himmelblau.so", mode = "755" },
]
post_install_script = '''
# Only create a symlink if it doesn't already exist
if [ ! -e /lib64/security/pam_himmelblau.so ]; then
    mkdir -p /lib64/security
    ln -s /usr/lib64/security/pam_himmelblau.so /lib64/security/pam_himmelblau.so
fi
'''
post_uninstall_script = '''
# Only remove a symlink if it exists and is a symlink
if [ -L /lib64/security/pam_himmelblau.so ]; then
    rm -f /lib64/security/pam_himmelblau.so
fi
'''
