[package]
name = "himmelblau_policies"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "himmelblau_policies"
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = "^0.1.72"
regex = "^1.9.1"
