[package]
name = "himmelblau_policies"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "himmelblau_policies"
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
regex = "^1.11.2"
base64.workspace = true
tokio.workspace = true
himmelblau_unix_common = { workspace = true }
os-release = "0.1.0"
semver = "1.0.25"
libhimmelblau.workspace = true
uuid.workspace = true
libc.workspace = true
tempfile = "3.22.0"
